# pypackpack

./: .gitignore  README.md  build.gradle.kts  pypackpack.mermaid  pyproject.toml  settings.gradle.kts  spec.md  spec_en.md  spec_ko.md
.github/workflows/: native-build.yml.disabled
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
packpack/: build.gradle.kts
packpack/src/commonMain/kotlin/org/thisisthepy/python/multiplatform/packpack/: Main.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/: Main.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/bundle/: BaseInterface.kt  DefaultInterface.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/compiler/: configure.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/config/: ConfigMigration.kt  ConfigValidator.kt  PEPSupport.kt  PyProjectConfig.kt  PyProjectParser.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/core/: Config.kt  Logging.kt  PyprojectTomlHandler.kt  Utils.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/deploy/: BaseInterface.kt  DefaultInterface.kt  Distribution.kt  FastTrack.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/di/: AppModule.kt  KoinInitializer.kt  ServiceFactory.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/packaging/: Assets.kt  Bundler.kt  Dependency.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/runtime/: CrossEnv.kt  Native.kt  Target.kt
packpack/src/main/kotlin/org/thisisthepy/python/multiplatform/packpack/util/: CommandLine.kt  CommandResult.kt  DownloadSpec.kt  Downloader.kt  ErrorHandler.kt  ProgressIndicator.kt
usage-example/: build.gradle.kts
(+45 files in other folders)
